--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
-    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
@@ -22,7 +22,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
@@ -36,7 +36,8 @@
     "react-hot-toast": "^2.4.1",
     "recharts": "^3.7.0",
     "resend": "^4.0.1",
-    "tailwind-merge": "^2.5.4"
+    "tailwind-merge": "^2.6.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
